# wifi-mapping

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: algorithm.yaml  anchors.yaml  collection.yaml
deploy/: README.md  pi_config.yaml  setup_pi.sh  wifi-mapping.service
docs/: ESP32_CSI_SETUP.md  HARDWARE_REQUIREMENTS.md  LITERATURE_REVIEW.md
gui/: app.py
gui/pages/: 1_Live_Collection.py  2_Localization.py  3_3D_Map.py  4_Detection.py  5_Fingerprinting.py  6_Settings.py
gui/utils/: data_loader.py  hardware.py  pipeline.py  theme.py
src/: __init__.py
src/collection/: __init__.py  csi_collector.py  ground_truth.py  rssi_scanner.py
src/detection/: __init__.py  breathing_detector.py  gait_classifier.py  motion_detector.py
src/localization/: __init__.py  aoa_estimation.py  fingerprinting.py  kalman_filter.py  trilateration.py
src/mapping/: __init__.py  adapters.py  demo.py  floor_plan.py  heatmap.py  occupancy_grid.py  point_cloud.py  visualization.py
src/processing/: __init__.py  csi_parser.py  feature_extraction.py  phase_sanitizer.py  process_rssi.py
src/utils/: __init__.py  config.py  data_formats.py  math_utils.py
tests/: test_csi_parser.py  test_gait_classifier.py  test_gui_pipeline.py  test_hardware.py  test_localization.py  test_mapping.py  test_motion_detector.py  test_process_rssi.py  test_trilateration.py
